finish build and test